--- a/main.css
+++ b/main.css
@@ -31,6 +31,7 @@ header{
 header ul{
   list-style: none;
 }
+
 nav > ul{
   display: flex;
   justify-content: space-between;
@@ -43,6 +44,7 @@ a{
   padding: 2rem 2.5rem;
   transition: background-color 0.2s linear;
 }
+
 header a:hover{
   background-color: rgb(144, 39, 10);
 }
@@ -157,6 +159,11 @@ figcaption {
   transition: opacity 0.2s ease-in-out;
   width: 100%;
   height: calc(100% - 8rem);
+}
+img#qr{
+  width: 30%;
+  margin-right: 6%;
+
 }
 section#contato {
   background-color: rgb(48, 56, 65);
